{
    "name": "KeyboardControls",
    "maps": [
        {
            "name": "Movement",
            "id": "84f72c88-bd5c-4948-b64f-9a5afcf40613",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "Button",
                    "id": "ec566fed-e712-4dce-8976-b3508240307a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TiltLeft",
                    "type": "Button",
                    "id": "f5d3af32-066b-4b61-bae9-fdaad4af1dc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TiltRight",
                    "type": "Button",
                    "id": "36cf4cb1-bce1-45c0-a54d-6872651f5b11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70e47c47-939f-4344-bf81-0fa8fb3be15d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ba2d2d9-e8d0-4176-8d85-171a0e93ffd8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TiltLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64248bfd-3ae1-4a96-95e3-9508da8d1beb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TiltRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}